src/test/ui/associated-item/associated-item-duplicate-names-3.stderr
error[E0201]: duplicate definitions with name `Bar`:
  --> $DIR/associated-item-duplicate-names-3.rs:14:5
   |
LL |     type Bar = i16;
   |     --------------- previous definition of `Bar` here
LL |     type Bar = u16;
   |     ^^^^^^^^^^^^^^^ duplicate definition

error: aborting due to previous error

For more information about this error, try `rustc --explain E0201`.
